# backend/openapi.json
@@ -5581,6 +5581,16 @@
             "title": "Name",
             "type": "string"
           },
+          "role": {
+            "default": "user",
+            "enum": [
+              "owner",
+              "admin",
+              "user"
+            ],
+            "title": "Role",
+            "type": "string"
+          },
           "translation_language": {
             "anyOf": [
               {
